WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285474
slack.com: Thread names are misaligned
https://bugs.webkit.org/show_bug.cgi?id=285474
Summary
slack.com: Thread names are misaligned
Sammy Gill
Reported
2025-01-06 14:34:48 PST
If you open a thread, the "Thread," text can become misaligned with the name of the channel
Attachments
Screenshot from webkit.org slack
(3.01 KB, image/png)
2025-01-06 14:36 PST
,
Sammy Gill
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Sammy Gill
Comment 1
2025-01-06 14:36:13 PST
Created
attachment 473814
[details]
Screenshot from webkit.org slack
Radar WebKit Bug Importer
Comment 2
2025-01-06 14:37:31 PST
<
rdar://problem/142439303
>
Sammy Gill
Comment 3
2025-01-06 14:38:19 PST
rdar://109804993
Sammy Gill
Comment 4
2025-01-06 14:39:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38602
EWS
Comment 5
2025-01-24 07:56:09 PST
Committed
289346@main
(8bfc50589d41): <
https://commits.webkit.org/289346@main
> Reviewed commits have been landed. Closing PR #38602 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug