slack.com: Thread names are misaligned rdar://109804993 https://bugs.webkit.org/show_bug.cgi?id=285474

Reviewed by Alan Baradlay.

css-align-3 defines the last baseline of a block container that is a scroll
container with baseline-source: auto as its block-end margin edge.
https://drafts.csswg.org/css-align-3/#baseline-export

We compute this in RenderBlockFlow::inlineBlockBaseline as
std::min(blockEndMarginEdge, lastBaselineOfContent) as we claim that
this is better behavior and has minimal breakages. However, it seems
like this causes an issue on Slack which causes misalignment between
pieces of text.

This patch removes this behavior for most pieces of content to align
with the spec. However, we opt to retain our legacy behavior for form
controls since the behavior there is undefined and we want to maintain
compatibility with our current behavior. We will maintain our current
behavior if the associated element is a form control element or the
piece of content is inside of a form control by checking if the
associated shadow host is a form control element.

This behavior was covered by the css/css-align/baseline-of-scrollable-1b.html
WPT. We also need to rebaseline the expectation for
fast/text/baseline-inline-block.html: in order to match other browsers.

* LayoutTests/TestExpectations:
* LayoutTests/fast/text/baseline-inline-block-expected.html:
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::inlineBlockBaseline const):

Canonical link: https://commits.webkit.org/289346@main